--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
               tomato: '#FA804C',
               linear: '#3D4FF3',
               headingColor: '#FFF9F4',
+              PriceColor: '#FA804C',
+              ShoesHeading: '#363958',
+              shoesBG:'#F1F1F1',
             }
           }
         }
@@ -41,9 +44,9 @@
       <section>
         <!-- Navigation Start  -->
         <nav class="hidden sm:inline-flex lg:visible ">
-          <div class="flex justify-between items-center py-5 ">
+          <div class="flex items-center justify-between py-5 ">
             <div>
-              <img src="icons/Logo.png" class="w-1/4" alt="" srcset="">
+              <img src="icons/Logo.png" class="w-1/4 block" alt="" srcset="">
 
             </div>
             <div>
@@ -70,7 +73,7 @@
               <h2 class="sm:text-5xl text-4xl uppercase font-bold"><span class="text-tomato">Nike React</span><br><span>Infinity Run 2</span></h2>
               <p class="sm:text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias similique repellendus odit, cum eum placeat.</p>
 
-              <button class="uppercase py-3 px-6 bg-linear border-2 rounded-md mt-4 text-white">
+              <button class="uppercase py-3 px-6 bg-linear border-0 rounded-md mt-4 text-white">
                <span> <i class="fa-solid fa-cart-shopping"></i> </span> <span class=""> Buy Now</span>
               </button>
               
@@ -84,6 +87,157 @@
      
     </header>
 
+    <main>
+      <!-- Casual Shoes Part  -->
+      <section class="sm:px-12 px-4 mx-auto container pt-3">
+          <h2 style="font-family: 'Yanone Kaffeesatz', sans-serif;" class="text-3xl tracking-tighter text-ShoesHeading  font-bold uppercase">Casual Shoes</h2>
+
+
+
+          <div class=" grid sm:grid-cols-1 md:grid-cols-2  lg:grid-cols-3 sm:gap-5 gap-4 pb-5 sm:pt-7 pt-4 ">
+        <!-- Casual Shoes 1  -->
+            <div class="bg-white border-0 shadow-md p-4 rounded-xl">
+              <div class="bg-shoesBG rounded-xl p-4 h-80">
+                <img src="images/image 5.png" class="w-full" alt="">
+              </div>
+              <div class="pt-4">
+                <h3 class="text-2xl font-semibold">Nike Shoes </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsam libero tempora.</p>
+                <div  class="flex items-center justify-between ">
+                  <h2 class="text-PriceColor sm:text-5xl text-4xl font-bold">$240</h2>
+
+                  <div><button class="uppercase py-3 px-6 bg-linear border-0 rounded-md mt-4 text-white">
+                    <span> <i class="fa-solid fa-cart-shopping"></i> </span> <span class=""> Buy Now</span>
+                   </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <!-- Casual  shoes 2  -->
+
+            <div class="bg-white border-0 shadow-md  p-4  rounded-xl">
+              <div class="bg-shoesBG rounded-xl p-4 h-80">
+                <img src="images/pngegg 1.png" class="w-full" alt="">
+              </div>
+              <div class="pt-4">
+                <h3 class="text-2xl font-semibold">Sneakers Skate Shoe </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsam libero tempora.</p>
+                <div  class="flex items-center justify-between ">
+                  <h2 class="text-PriceColor sm:text-5xl text-4xl font-bold">$240</h2>
+
+                  <div><button class="uppercase py-3 px-6 bg-linear border-0 rounded-md mt-4 text-white">
+                    <span> <i class="fa-solid fa-cart-shopping"></i> </span> <span class=""> Buy Now</span>
+                   </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- casual shoes 3  -->
+
+            <div class="bg-white border-0 shadow-md  p-4  rounded-xl">
+              <div class="bg-shoesBG rounded-xl p-4 h-80">
+                <img src="images/Daco_1703273 1.png" class="w-full" alt="">
+              </div>
+              <div class="pt-4">
+                <h3 class="text-2xl font-semibold">Sneakers Basketball shoe </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsam libero tempora.</p>
+                <div  class="flex items-center justify-between ">
+                  <h2 class="text-PriceColor sm:text-5xl text-4xl font-bold">$240</h2>
+
+                  <div><button class="uppercase py-3 px-6 bg-linear border-0 rounded-md mt-4 text-white">
+                    <span> <i class="fa-solid fa-cart-shopping"></i> </span> <span class=""> Buy Now</span>
+                   </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+          </div>
+      </section>
+       <!-- Formal Shoes Part  -->
+
+       <section class="sm:px-12 px-4 mx-auto container pt-10">
+        <h2 style="font-family: 'Yanone Kaffeesatz', sans-serif;" class="text-3xl tracking-tighter text-ShoesHeading  font-bold uppercase">Formal Shoes</h2>
+
+
+
+        <div class=" grid sm:grid-cols-1 md:grid-cols-2  lg:grid-cols-3 sm:gap-5 gap-4 pb-5 sm:pt-7 pt-2">
+      <!-- Formal Shoes 1  -->
+          <div class="bg-white border-0 shadow-md p-4 rounded-xl">
+            <div class=" rounded-xl  h-80">
+              <img src="images/Rectangle 39.png" class="w-full" alt="">
+            </div>
+            <div class="pt-4">
+              <h3 class="text-2xl font-semibold">Nike Shoes </h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsam libero tempora.</p>
+              <div  class="flex items-center justify-between ">
+                <h2 class="text-PriceColor sm:text-5xl text-4xl font-bold">$240</h2>
+
+                <div><button class="uppercase py-3 px-6 bg-linear border-0 rounded-md mt-4 text-white">
+                  <span> <i class="fa-solid fa-cart-shopping"></i> </span> <span class=""> Buy Now</span>
+                 </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        <!-- Formal  shoes 2  -->
+
+          <div class="bg-white border-0 shadow-md  p-4  rounded-xl">
+            <div class=" rounded-xl  h-80">
+              <img src="images/Rectangle 38.png" class="w-full" alt="">
+            </div>
+            <div class="pt-4">
+              <h3 class="text-2xl font-semibold">Sneakers Skate Shoe </h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsam libero tempora.</p>
+              <div  class="flex items-center justify-between ">
+                <h2 class="text-PriceColor sm:text-5xl text-4xl font-bold">$240</h2>
+
+                <div><button class="uppercase py-3 px-6 bg-linear border-0 rounded-md mt-4 text-white">
+                  <span> <i class="fa-solid fa-cart-shopping"></i> </span> <span class=""> Buy Now</span>
+                 </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Formal shoes 3  -->
+
+          <div class="bg-white border-0 shadow-md  p-4  rounded-xl">
+            <div class=" rounded-xl  h-80">
+              <img src="images/Mask Group.png" class="w-full" alt="">
+            </div>
+            <div class="pt-4">
+              <h3 class="text-2xl font-semibold">Sneakers Basketball shoe </h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsam libero tempora.</p>
+              <div  class="flex items-center justify-between ">
+                <h2 class="text-PriceColor sm:text-5xl text-4xl font-bold">$240</h2>
+
+                <div><button class="uppercase py-3 px-6 bg-linear border-0 rounded-md mt-4 text-white">
+                  <span> <i class="fa-solid fa-cart-shopping"></i> </span> <span class=""> Buy Now</span>
+                 </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
+    </section>
+
+
+
+    </main>
+
+    <footer>
+
+
+
+
+    </footer>
 
 
 
